tests/fixtures/invalid/prelude_dimension_as_value.gcl
// Error: prelude dimensions are type-system names, not values.
node x: Dimensionless = Length;
